[gd_scene load_steps=2 format=3 uid="uid://bxdsjacaobm8u"]

[ext_resource type="Script" path="res://menus/main_menu/save_row.gd" id="1_hsycm"]

[node name="SaveRow" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_hsycm")

[node name="Name" type="Button" parent="."]
layout_mode = 2
text = "Save Name"

[node name="Delete" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "X"

[connection signal="pressed" from="Name" to="." method="_on_name_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
